@@ -30,3 +30,4 @@ PHP                                                                        NEWS
 - Added possibility to check in which extension an internal function was
   defined using reflection API. (Johannes)
 - Fixed bug #34286 (__toString() behavior is inconsistent). (Marcus)
+- Added ImageColorHistogram() to gd extension. (Hartmut)
